  * Fixed display of numeric lists on the index page and file pages.  Bug #12
    by tobijk.
  * Skip TestRDocOptions#test_check_files on windows until a windows-specific
    test can be created.  RubyForge bug #28821 by Usaku Nakamura.
  * Fixed line-height of headings in method and alias descriptions.  RubyForge
    Bug #2770 by Adam Avilla

=== 3.4 / 2010-01-06

* Minor enhancements
  * RDoc::RDoc#document may now be called with an RDoc::Options instance.
* Bug fixes
  * Added skips to Encoding tests running on 1.8.
  * Fixed warnings

=== 3.3 / 2010-01-03

* Minor enhancements
  * The coverage report can now report undocumented method parameters
    including methods defined in C.

    <kbd>rdoc -C</kbd> gives a standard report, <kbd>rdoc -C1</kbd> includes
    method parameters.  Method parameters are considered documented if they're
    marked-up with <tt>+</tt>, <tt><code></tt> or <code><tt></code>.
  * The C parser now uses <tt>*args</tt> instead of <tt>...</tt> if no
    <tt>call-seq</tt> was provided to give names to the arguments.
* Bug fixes
  * The C parser now records the file location of aliases, attributes,
    constants and methods allowing -C to work on C files.
  * Darkfish now handles dots in call-seq allowing <tt>ary.insert(index,
    obj...)</tt> to display correctly.  Patch #6 by KUBO Takehiro.
  * Improved processing of meta-programmed methods when followed by unparseable
    syntax.  RubyForge patch #28653 by Aidan Cully.
  * rdoc now touches the flag file when it create the output directory.
    Prevents the "isn't an RDoc directory" error if rdoc crashes.
  * RDoc now properly converts to the expected output encoding.  RubyForge bug
    #28791 by Dzmitry Prakapenka.
  * Restored parsing of block comments.  RubyForge bug #28668 by Stefano Crocco.
  * Metaprogrammed methods defined with blocks no longer confuse the ruby
    parser.  RubyForge bug #28370 by Erik Hollensbe.
  * ri no longer displays all methods in the inheritance chain.
